# sentinel-downloader

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.tests  LICENSE  Makefile  README.md  _config.yml  index.markdown  setup.cfg  setup.py
files/: install-deps.yaml  recipe-tests.yaml
sentinel_downloader/: config.py  constants.py  log.py  schema.py  settings.py  utils.py
sentinel_downloader/api/: api.py  exceptions.py
sentinel_downloader/cli/: base.py  download.py
tests/: __init__.py  spellbook.py
tests/data/config/: config-full.yaml  config-minimal.yaml
tests/unit/: test_config.py
