[bdist_wheel]
universal = 1

[metadata]
name = sentinel_downloader
url = https://github.com/zaitra/sentinel-downloader
description = Library and CLI tool for downloading satellite images from the https://www.sentinel-hub.com/
long_description = file: README.md
long_description_content_type = text/markdown
author = Zaitra
author_email = info@zaitra.io
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Utilities
keywords =
    sentinel
    copernicus


[options]
packages = find:
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    sentinelhub
    click
    opencv-python
    jsonschema
    pyyaml

[options.packages.find]
exclude =
    tests*

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    sentinel-downloader=sentinel_downloader.cli.base:sentinel_downloader_base
